--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,23 @@
     border-radius: 0;
     margin-bottom: -1px;
 }
+
+
+.jumbotron img {
+    width: 25%;
+}
+
+section {
+    min-height: 420px;
+}
+
+.ig-thumbnail {
+    width: 100px;
+    height: 100px;
+    float: left;
+    overflow: hidden;
+}
+
+.ig-thumbnail img{
+    width: 100px;
+}
